fixed tweet text content to word wrap when too long, and left align

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -3,6 +3,7 @@ article {
   padding: 15px;
   margin-bottom: 3em;
   margin-top: 3em;
+  max-width: 100%;
 }
 
 article:hover {
@@ -19,7 +20,6 @@ article p {
   display: flex;
   margin-left: 1em;
   margin-right: 1em;
-
 }
 
 .avatar-name {
@@ -34,13 +34,11 @@ article p {
 }
 
 .tweet-content { 
+  display: block;
   font-weight: bold;
+  text-align: left;
   margin-bottom: 1.5em;
-}
-
-hr {
-  border-top: 5px solid;
-  margin-bottom: 5px;
+  word-wrap: break-word;
 }
 
 footer {
